# PROJECT1

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  wiring_guide.md
components/max30102/: CMakeLists.txt  max30102.c
components/max30102/include/: max30102.h
components/max30205/: CMakeLists.txt  max30205.c
components/max30205/include/: max30205.h
components/mpu6050/: CMakeLists.txt  mpu6050.c
components/mpu6050/include/: mpu6050.h
main/: CMakeLists.txt  algorithms.c  algorithms.h  ble_server.c  ble_server.h  config.h  denoise_model.h  health_watch_test.c.old  idf_component.yml  lcd_test.txt  main.c  mainwithqualitygate.txt  mainwithstress.txt  number.txt  respiration_estimator.c  respiration_estimator.h  respiration_model.h  signal_filters.c  signal_filters.h  stress_model.h  text.txt  tinyml_manager.cc  tinyml_manager.h  ui.c  ui.h
